<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="LabelFor"
    tools:context=".AdvanceLevel">

    <EditText
        android:id="@+id/image1"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="hi"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/firstImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <EditText
        android:id="@+id/image2"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/secondName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1" />

    <EditText
        android:id="@+id/image3"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/thirdImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/firstImage"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:contentDescription="@string/first_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image1"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdlTImer"
        app:layout_constraintVertical_bias="0.164"
        app:srcCompat="@drawable/audi_a1" />

    <ImageView
        android:id="@+id/secondImage"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/second_image"
        app:layout_constraintEnd_toStartOf="@+id/image2"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstImage"
        app:srcCompat="@drawable/audi_a3" />

    <ImageView
        android:id="@+id/thirdImage"
        android:layout_width="250dp"
        android:layout_height="130dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/third_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image3"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondImage"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/audi_a7" />

    <TextView
        android:id="@+id/finalResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/result"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirdImage" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/Score"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="submitButtonClick"
        android:text="@string/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalResult" />

    <TextView
        android:id="@+id/AdlTImer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/AdlTimer"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:text=""
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/image2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.761"
        app:layout_constraintStart_toEndOf="@+id/firstImage"
        app:layout_constraintTop_toBottomOf="@+id/image1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/secAns"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/image3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/secondImage"
        app:layout_constraintTop_toBottomOf="@+id/image2"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/thirdAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/thirdImage"
        app:layout_constraintTop_toBottomOf="@+id/image3"
        app:layout_constraintVertical_bias="0.009" />
</androidx.constraintlayout.widget.ConstraintLayout>