<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyTheCarImage">

    <TextView
        android:id="@+id/car_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_Model"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <ImageView
        android:id="@+id/carImage1"
        android:layout_width="250dp"
        android:layout_height="173dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/car_image"
        android:onClick="firstImageOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/carImage2"
        android:layout_width="250dp"
        android:layout_height="173dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/secondcar"
        android:onClick="secondImageOnClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage1" />

    <ImageView
        android:id="@+id/carImage3"
        android:layout_width="250dp"
        android:layout_height="161dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/carimage3"
        android:onClick="thirdImageOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="27dp"
        android:layout_marginTop="12dp"
        android:text="@string/result"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImage3" />

    <Button
        android:id="@+id/NextButton"
        android:layout_width="110dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:onClick="nextButtonOnclick"
        android:text="@string/Next_button"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005" />


</androidx.constraintlayout.widget.ConstraintLayout>